@@ -14,29 +14,18 @@
 
 package com.predic8.membrane.core.exchangestore;
 
-import com.predic8.membrane.core.HttpRouter;
-import com.predic8.membrane.core.exchange.AbstractExchange;
-import com.predic8.membrane.core.exchange.Exchange;
-import com.predic8.membrane.core.http.LargeBodyTest;
-import com.predic8.membrane.core.http.Request;
-import com.predic8.membrane.core.http.Response;
-import com.predic8.membrane.core.interceptor.AbstractInterceptor;
-import com.predic8.membrane.core.interceptor.ExchangeStoreInterceptor;
-import com.predic8.membrane.core.interceptor.HTTPClientInterceptor;
-import com.predic8.membrane.core.interceptor.Outcome;
-import com.predic8.membrane.core.rules.Rule;
-import com.predic8.membrane.core.rules.ServiceProxy;
-import com.predic8.membrane.core.rules.ServiceProxyKey;
-import com.predic8.membrane.core.transport.http.HttpClient;
-import com.predic8.membrane.core.transport.http.client.HttpClientConfiguration;
+import com.predic8.membrane.core.*;
+import com.predic8.membrane.core.exchange.*;
+import com.predic8.membrane.core.http.*;
+import com.predic8.membrane.core.interceptor.*;
+import com.predic8.membrane.core.rules.*;
+import com.predic8.membrane.core.transport.http.*;
+import com.predic8.membrane.core.transport.http.client.*;
 import org.junit.jupiter.api.*;
 
-import java.io.IOException;
-import java.util.concurrent.atomic.AtomicReference;
+import java.util.concurrent.atomic.*;
 
-import static com.predic8.membrane.core.http.Header.CHUNKED;
-import static com.predic8.membrane.core.http.Header.TRANSFER_ENCODING;
-import static org.junit.jupiter.api.Assertions.*;
+import static com.predic8.membrane.core.http.Header.*;
 import static org.junit.jupiter.api.Assertions.*;
 
 public class LimitedMemoryExchangeStoreIntegrationTest {
@@ -55,10 +44,10 @@ public class LimitedMemoryExchangeStoreIntegrationTest {
         hcc = new HttpClientConfiguration();
         hcc.setMaxRetries(1);
 
-        Rule rule = new ServiceProxy(new ServiceProxyKey("localhost", "POST", ".*", 3045), "thomas-bayer.com", 80);
-        rule.getInterceptors().add(new AbstractInterceptor() {
+        ServiceProxy proxy = new ServiceProxy(new ServiceProxyKey("localhost", "POST", ".*", 3045), "thomas-bayer.com", 80);
+        proxy.getInterceptors().add(new AbstractInterceptor() {
             @Override
-            public Outcome handleRequest(Exchange exc) throws Exception {
+            public Outcome handleRequest(Exchange exc) {
                 exc.setResponse(Response.ok().body("").build());
                 return Outcome.RETURN;
             }
@@ -67,11 +56,11 @@ public class LimitedMemoryExchangeStoreIntegrationTest {
 
         ((HTTPClientInterceptor) router.getTransport().getInterceptors().get(3)).setHttpClientConfig(hcc);
 
-        router.getRuleManager().addProxyAndOpenPortIfNew(rule);
+        router.getRuleManager().addProxyAndOpenPortIfNew(proxy);
         router.init();
 
-        Rule rule1 = new ServiceProxy(new ServiceProxyKey("localhost", "POST", ".*", 3046), "localhost", 3045);
-        rule1.getInterceptors().add(new AbstractInterceptor() {
+        ServiceProxy proxy1 = new ServiceProxy(new ServiceProxyKey("localhost", "POST", ".*", 3046), "localhost", 3045);
+        proxy1.getInterceptors().add(new AbstractInterceptor() {
             @Override
             public Outcome handleRequest(Exchange exc) throws Exception {
                 middleExchange.set(exc);
@@ -85,7 +74,7 @@ public class LimitedMemoryExchangeStoreIntegrationTest {
 
         router2.getTransport().getInterceptors().add(3, new ExchangeStoreInterceptor(lmes));
 
-        router2.getRuleManager().addProxyAndOpenPortIfNew(rule1);
+        router2.getRuleManager().addProxyAndOpenPortIfNew(proxy1);
         router2.init();
     }
 
@@ -95,7 +84,7 @@ public class LimitedMemoryExchangeStoreIntegrationTest {
     }
 
     @AfterAll
-    public static void shutdown() throws IOException {
+    public static void shutdown() {
         if (router != null)
             router.shutdown();
         if (router2 != null)
@@ -107,39 +96,42 @@ public class LimitedMemoryExchangeStoreIntegrationTest {
         long len = 100;
 
         Exchange e = new Request.Builder().post("http://localhost:3046/foo").body(len, new LargeBodyTest.ConstantInputStream(len)).buildExchange();
-        new HttpClient(hcc).call(e);
-
+        try (HttpClient hc = new HttpClient(hcc)) {
+            hc.call(e);
+        }
         assertTrue(e.getRequest().getBody().wasStreamed());
         assertTrue(middleExchange.get().getRequest().getBody().wasStreamed());
 
         assertEquals(1, lmes.getAllExchangesAsList().size());
-        assertEquals(len, lmes.getAllExchangesAsList().get(0).getRequest().getBody().getLength());
+        assertEquals(len, lmes.getAllExchangesAsList().getFirst().getRequest().getBody().getLength());
     }
 
     @Test
     public void large() throws Exception {
-        long len = Integer.MAX_VALUE + 1l;
+        long len = Integer.MAX_VALUE + 1L;
 
         Exchange e = new Request.Builder().post("http://localhost:3046/foo").body(len, new LargeBodyTest.ConstantInputStream(len)).buildExchange();
-        new HttpClient(hcc).call(e);
-
+        try (HttpClient hc = new HttpClient(hcc)) {
+            hc.call(e);
+        }
         assertTrue(e.getRequest().getBody().wasStreamed());
         assertTrue(middleExchange.get().getRequest().getBody().wasStreamed());
-        int snappedLength = lmes.getAllExchangesAsList().get(0).getRequest().getBody().getLength();
-        assertTrue( 100000 <= snappedLength && snappedLength <= 150000);
+        int snappedLength = lmes.getAllExchangesAsList().getFirst().getRequest().getBody().getLength();
+        assertTrue(100000 <= snappedLength && snappedLength <= 150000);
     }
 
     @Test
     public void largeChunked() throws Exception {
-        long len = Integer.MAX_VALUE + 1l;
+        long len = Integer.MAX_VALUE + 1L;
 
         Exchange e = new Request.Builder().post("http://localhost:3046/foo").body(len, new LargeBodyTest.ConstantInputStream(len)).header(TRANSFER_ENCODING, CHUNKED).buildExchange();
-        new HttpClient(hcc).call(e);
-
+        try(HttpClient hc = new HttpClient(hcc)) {
+            hc.call(e);
+        }
         assertTrue(e.getRequest().getBody().wasStreamed());
         assertTrue(middleExchange.get().getRequest().getBody().wasStreamed());
-        int snappedLength = lmes.getAllExchangesAsList().get(0).getRequest().getBody().getLength();
-        assertTrue( 100000 <= snappedLength && snappedLength <= 150000);
+        int snappedLength = lmes.getAllExchangesAsList().getFirst().getRequest().getBody().getLength();
+        assertTrue(100000 <= snappedLength && snappedLength <= 150000);
     }
 
 }
